Created bootstrap base

--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>CP317 Requirements Document</title>
     <meta charset="UTF-8">
-    <title>Beer Finder Requirements</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="./favicon.png">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="jumbotron">
+      <div class="container text-center">
+        <h1><b>Beer Buddy Requirements Document</b></h1>
+        <h4><b>Designed by:</b> CP317 Software Engineering Students</h4>
+        <h4><b>Date Started:</b> May 5th, 2018</h4>
+        <h4><b>Date Completed:</b> August 3rd, 2018 <i>(Expected)</i></h4>
+      </div>
+    </div>
+    <div class="container-fluid information">
+      <div class="row content">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-6" >
+          <h1>Introduction</h1>
+          <br />
+          <h4><b><u>1.1</u></b> The Purpose of the Document</h4>
+          <p>The purpose of this document will be to outline and describe the application, the application interface requirements, design requirements, business and marketing plan and finally the implementation process.</p>
+        </div>
+        <div class="col-sm-3"></div>
+      </div>
+    </div>
 
   </body>
 </html>
