--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   <body>
     <div class="jumbotron">
       <div class="container text-center">
-        <h1><b>Beer Buddy Requirements Document</b></h1>
+        <br />
+        <h1 id="title">
+          <b>Beer Buddy Requirements Document</b>
+        </h1>
+        <h4 id="version"><u>v2.0</u></h4>
+        <br /><br />
         <h4><b>Designed by:</b> CP317 Software Engineering Students</h4>
         <h4><b>Date Started:</b> May 5th, 2018</h4>
         <h4><b>Date Completed:</b> August 3rd, 2018 <i>(Expected)</i></h4>
@@ -22,14 +27,122 @@
     </div>
     <div class="container-fluid information">
       <div class="row content">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-6" >
-          <h1>Introduction</h1>
-          <br />
-          <h4><b><u>1.1</u></b> The Purpose of the Document</h4>
-          <p>The purpose of this document will be to outline and describe the application, the application interface requirements, design requirements, business and marketing plan and finally the implementation process.</p>
+        <div class="col-sm-1 col-md-1 col-lg-3"></div>
+        <div class="col-sm-10 col-md-10 col-lg-6" >
+          <div>
+            <br /><br />
+            <h1>
+              <span class="subsection">1.</span>
+              Introduction
+            </h1>
+            <hr>
+            <br />
+            <div>
+              <h4>
+                <span class="subsection"><b><u>1.1</u></b></span>
+                The Purpose of the Document
+              </h4>
+              <p>
+                The purpose of this document will be to outline and describe the application, the application interface requirements, design requirements, business and marketing plan and finally the implementation process.
+              </p>
+              <br />
+            </div>
+            <div>
+              <h4>
+                <span class="subsection"><b><u>1.2</u></b></span>
+                Scope of the Document
+              </h4>
+              <p>
+                Our application will be web based. It will require that a user will have the ability to; use or locate a computer, connect to the internet (Wi-Fi or wired ethernet connections), and use a web browser to navigate to our application site.
+              </p>
+              <br />
+            </div>
+            <div>
+              <h4>
+                <span class="subsection"><b><u>1.3</u></b></span>
+                Overview of the Application
+              </h4>
+              <p>
+                This section describes the software requirements for the Beer Buddy application. The purpose of our application will be to make (preferred) beer acquisition easier and faster. The application aims to increase the speed of the buying process. Presently, customers go through a six-step process when purchasing anything. In order; problem recognition, information search, evaluation of alternatives, purchase decision, purchase and post purchase evaluation. Essentially the problems a consumer faces are; they don’t know what they want, they must work and evaluate choices (costly endeavor) and finally they are left to review themselves whether they like the products/services they purchased. Our web application will allow users to use essential primary criteria to make choices that will best suit their preferences. Since the consumer already has a historic previous preference they will be able to make the choices that will offer them relevant options to choose from instead of testing out every product to determine if they enjoy it or not.
+              </p>
+            </div>
+            <br  /><br  /><br />
+          </div>
+          <div>
+            <h1>
+              <span class="subsection">2.</span>
+              Business Context
+            </h1>
+            <hr>
+            <br />
+            <div>
+              <h4>
+                <span class="subsection"><b><u>2.1</u></b></span>
+                Ease of Use
+              </h4>
+              <p>
+                This section describes the consumer view for the Beer Buddy application. Initially the user will have the main screen with two options. An option where they choose whether they are familiar with beers or they are novice beer consumers. The first choice will then lead to a new page that will be selection criteria. After the user chooses their preferences, the application will generate a list of relevant beers. The user will then be able to select the beer they would like, and it will be guaranteed to be of their liking (such that they entered preferences they actually enjoyed). The latter option of novice consumers will lead to a page which will have approximately five to ten beers which are extremely different. The user will be able to select the one that interests them, the application will list the qualities or key characteristics of the drink and any relevant reviews. For all the drinks the assumption will be made that they are available for purchase locally (for this project local is assumed to be Waterloo Region).
+              </p>
+              <br />
+            </div>
+            <div>
+              <h4>
+                <span class="subsection"><b><u>2.2</u></b></span>
+                Scalability
+              </h4>
+              <p>
+                This section describes the scalability for the Beer Buddy application. Initially, the application is designed to be accessible via websites. Anyone with a computer and access to a browser will be able to access it and then embark on a trip to purchase the drink that best fits their criteria. As a business model, this application would ideally made for tablets which would be available at local bars, pubs, and nightclubs. This would make it easier for people to pick out new drinks or similar drinks to try out while enjoying their night out with friends or their partners. If implemented in tablet mode, the application could also be used in local beer stores or stores with an assortment of beers/alcohols that are available for purchase. This would increase the stores revenue and the data can then be recorded and sold to beer/alcohol manufacturers so that they can monitor what the consumers like to drink and what not.
+              </p>
+              <br  /><br  /><br />
+            </div>
+          </div>
+          <div>
+            <h1>
+              <span class="subsection">3.</span>
+              Current System Description
+            </h1>
+            <hr>
+            <br />
+            <div>
+              <h4>
+                <span class="subsection"><b><u>3.1</u></b></span>
+                Purpose
+              </h4>
+              <p>
+                The goal of Beer Buddy is to provide insight and advice in the beer choices of its users. They can enter criteria that they want to use to query related beers, as well as adding custom beers to the database (would use the API). The service assumes that the beers are available locally (same city as one resides in).
+              </p>
+              <br />
+            </div>
+            <div>
+              <h4>
+                <span class="subsection"><b><u>3.2</u></b></span>
+                User Characteristics
+              </h4>
+              <p>
+                User must understand terms about beer, and have basic aptitude towards search engines.
+              </p>
+              <br />
+              <div class="text-center centeredImage">
+                <img src="./images/actors.png" class="img-responsive" alt="UML Actors">
+              </div>
+              <br />
+              <h5>Select Criteria</h5>
+              <p>
+                Option to choose whether they are a novice consumer of beer or not
+              </p>
+              <h5>Pick Criteria Attributes</h5>
+              <p>
+                Pick preferences of what kind of beer they like or enjoy. What combination of these do they prefer.
+              </p>
+              <h5>View Queried Beers</h5>
+              <p>
+                A list of relevant beers based on the attributes selected (along with key information about local availability, tags, ratings (if applicable)
+              </p>
+              <br  /><br  /><br />
+            </div>
+          </div>
         </div>
-        <div class="col-sm-3"></div>
+        <div class="col-sm-1 col-md-1 col-lg-3"></div>
       </div>
     </div>
 
