Added more data

--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
               <p>
                 A list of relevant beers based on the attributes selected (along with key information about local availability, tags, ratings (if applicable)
               </p>
+              <h5>Add Custom Beer</h5>
+              <p>
+                If preferred beer not found, or user has already tried all the listed suggested beers. A window will be presented (through an “Add New Beer” button) for the user to enter a new beer that fits the selection criteria previously listed (if not selected the user will enter attributes on their own). Then the beer will be submitted for review by moderators who will determine the legitimacy of the submission and whether it is accurate with the attributes listed as its traits.
+              </p>
               <br  /><br  /><br />
             </div>
           </div>
