--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
           <b>Beer Buddy Requirements Document</b>
         </h1>
         <a href="https://github.com/russellgoldman/CP317-Beer-Finder" target="_blank">
-          <h4 id="version"><u>v2.0</u></h4>
+          <h4><u>v2.0</u></h4>
         </a>
         <br /><br />
-        <h4><b>Designed by:</b> CP317 Software Engineering Students</h4>
-        <h4><b>Date Started:</b> May 5th, 2018</h4>
-        <h4><b>Date Completed:</b> August 3rd, 2018 <i>(Expected)</i></h4>
+        <h4><b>Designed by:</b><h6>CP317 Software Engineering Students</h6></h4>
+        <h4><b>Date Started:</b><h6>May 5th, 2018</h6></h4>
+        <h4><b>Date Completed:</b><h6>August 3rd, 2018 <i>(Expected)</h6></i>
       </div>
     </div>
     <div class="container-fluid information">
