--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
               API Developers
             </h4>
             <ul>
-              <li>Wen Han</li>
+              <li>Wen Han Tang</li>
               <li>Huai Yao Hu (Walter)</li>
               <li>Matthew Wong</li>
               <li>Jeremy Lickers</li>
