--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
           <b>Beer Buddy Requirements Document</b>
         </h1>
         <a href="https://github.com/russellgoldman/CP317-Beer-Finder" target="_blank">
-          <h4><u>v2.0</u></h4>
+          <h4><u>v1.0 Beta</u></h4>
         </a>
         <br /><br />
         <h4><b>Designed by:</b><h6>CP317 Software Engineering Students</h6></h4>
         <h4><b>Date Started:</b><h6>May 5th, 2018</h6></h4>
-        <h4><b>Date Completed:</b><h6>August 3rd, 2018 <i>(Expected)</h6></i>
+        <h4><b>Date Completed:</b><h6>August 14th, 2018</h6>
       </div>
     </div>
     <div class="container-fluid information">
@@ -54,7 +54,7 @@
                 Scope of the Document
               </h4>
               <p>
-                Our application will be web based. It will require that a user will have the ability to; use or locate a computer, connect to the internet (Wi-Fi or wired ethernet connections), and use a web browser to navigate to our application site.
+                Our application will be web based. It will require that a user will have the ability to use a computer, connect to the internet (Wi-Fi or wired ethernet connections), and use a web browser to navigate through our application site.
               </p>
               <br />
             </div>
@@ -64,7 +64,7 @@
                 Overview of the Application
               </h4>
               <p>
-                This section describes the software requirements for the Beer Buddy application. The purpose of our application will be to make (preferred) beer acquisition easier and faster. The application aims to increase the speed of the buying process. Presently, customers go through a six-step process when purchasing anything. In order; problem recognition, information search, evaluation of alternatives, purchase decision, purchase and post purchase evaluation. Essentially the problems a consumer faces are; they don’t know what they want, they must work and evaluate choices (costly endeavor) and finally they are left to review themselves whether they like the products/services they purchased. Our web application will allow users to use essential primary criteria to make choices that will best suit their preferences. Since the consumer already has a historic previous preference they will be able to make the choices that will offer them relevant options to choose from instead of testing out every product to determine if they enjoy it or not.
+                This section describes the software requirements for the BeerBuddy application. The purpose of our application will be to make (preferred) beer acquisition easier and faster. The application aims to increase the speed of the buying process. Presently, customers go through a six-step process when purchasing anything. In order; problem recognition, information search, evaluation of alternatives, purchase decision, purchase and post purchase evaluation. Essentially the problems a consumer faces are; they don’t know what they want, they must work and evaluate choices (costly endeavor) and finally they are left to review themselves whether they like the products/services they purchased. Our web application will allow users to use essential primary criteria to make choices that will best suit their preferences. Since the consumer already has a historic previous preference they will be able to make the choices that will offer them relevant options to choose from instead of testing out every product to determine if they enjoy it or not.
               </p>
             </div>
             <br  /><br  />
@@ -82,7 +82,7 @@
                 Ease of Use
               </h4>
               <p>
-                This section describes the consumer view for the Beer Buddy application. Initially the user will have the main screen with two options. An option where they choose whether they are familiar with beers or they are novice beer consumers. The first choice will then lead to a new page that will be selection criteria. After the user chooses their preferences, the application will generate a list of relevant beers. The user will then be able to select the beer they would like, and it will be guaranteed to be of their liking (such that they entered preferences they actually enjoyed). The latter option of novice consumers will lead to a page which will have approximately five to ten beers which are extremely different. The user will be able to select the one that interests them, the application will list the qualities or key characteristics of the drink and any relevant reviews. For all the drinks the assumption will be made that they are available for purchase locally (for this project local is assumed to be Waterloo Region).
+                This section describes the consumer view for the BeerBuddy application. Initially the user will have the main screen with two options. An option where they choose whether they are familiar with beers, the experience option,  or they are novice beer consumers, the novice option. Choosing the experienced option will then lead to a new page that will be selection criteria. After the user chooses their preferences, the application will generate a list of relevant beers. The user will then be able to select the beer they would like based on the entered preferences. The latter option of novice consumers will lead to a page which will have approximately five to ten beers which are extremely different. The user will be able to select the one that interests them, the application will list the qualities or key characteristics of the drink and any relevant reviews. For all the drinks the assumption will be made that they are available for purchase locally (for this project local is assumed to be Waterloo Region).
               </p>
               <br />
             </div>
@@ -92,7 +92,7 @@
                 Scalability
               </h4>
               <p>
-                This section describes the scalability for the Beer Buddy application. Initially, the application is designed to be accessible via websites. Anyone with a computer and access to a browser will be able to access it and then embark on a trip to purchase the drink that best fits their criteria. As a business model, this application would ideally made for tablets which would be available at local bars, pubs, and nightclubs. This would make it easier for people to pick out new drinks or similar drinks to try out while enjoying their night out with friends or their partners. If implemented in tablet mode, the application could also be used in local beer stores or stores with an assortment of beers/alcohols that are available for purchase. This would increase the stores revenue and the data can then be recorded and sold to beer/alcohol manufacturers so that they can monitor what the consumers like to drink and what not.
+                This section describes the scalability for the BeerBuddy application. Initially, the application is designed to be accessible via websites. As a business model, this application would ideally made for tablets which would be available at local bars, pubs, and nightclubs. This would make it easier for people to pick out new drinks or similar drinks to try. If implemented in tablet mode, the application could also be used in local beer stores or stores with an assortment of beers/alcohols that are available for purchase. This would increase the stores revenue and the data can then be recorded and sold to beer/alcohol manufacturers so that they can monitor what the consumers like to drink. More generally the algorithm could also be applied to other products to determine brand/quality preferences.
               </p>
               <br  /><br  />
             </div>
@@ -110,7 +110,7 @@
                 Purpose
               </h4>
               <p>
-                The goal of Beer Buddy is to provide insight and advice in the beer choices of its users. They can enter criteria that they want to use to query related beers, as well as adding custom beers to the database (would use the API). The service assumes that the beers are available locally (same city as one resides in).
+                The goal of BeerBuddy is to provide insight and advice in beer choices of its users. They can enter criteria that they want to use to query related beers, as well as adding custom beers to the database (would involve use of API). The service assumes that the beers are available locally (same city as one resides in).
               </p>
               <br />
             </div>
@@ -120,7 +120,7 @@
                 User Characteristics
               </h4>
               <p>
-                User must understand terms about beer, and have basic aptitude towards search engines.
+                User must understand terms about beer
               </p>
               <br />
               <div class="text-center centeredImage">
@@ -133,15 +133,15 @@
               </p>
               <h5>Pick Criteria Attributes</h5>
               <p>
-                Pick preferences of what kind of beer they like or enjoy. What combination of these do they prefer.
+                Pick preferences of what kind of beer they like or enjoy. What combination of attributes do they prefer.
               </p>
               <h5>View Queried Beers</h5>
               <p>
-                A list of relevant beers based on the attributes selected (along with key information about local availability, tags, ratings (if applicable)
+                A list of relevant beers based on the attributes selected
               </p>
               <h5>Add Custom Beer</h5>
               <p>
-                If preferred beer not found, or user has already tried all the listed suggested beers. A window will be presented (through an “Add New Beer” button) for the user to enter a new beer that fits the selection criteria previously listed (if not selected the user will enter attributes on their own). Then the beer will be submitted for review by moderators who will determine the legitimacy of the submission and whether it is accurate with the attributes listed as its traits.
+                Incase preferred beer is not found, or user has already tried all the listed suggested beers. A window is available (through an “Add New Beer” button) for the user to enter a new beer that fits the selection criteria previously listed (if not selected the user will enter attributes on their own). The user needs to have an active account in order to be able to add the beer to the database.
               </p>
               <br  /><br  />
             </div>
@@ -156,19 +156,19 @@
             <div>
               <h4>
                 <span class="subsection"><b><u>4.1</u></b></span>
-                Purpose
+                  Beer Search Optimization
               </h4>
-              <ol>
+              <ul>
                 <li>
-                  Client enters information about beer through tags/search filters
+                  User enters information about beer through tags/search filters
                 </li>
                 <li>
                   Produce search results
                 </li>
                 <li>
-                  Search results will be sorted based on options entered by user or default options
+                  Search results will be sorted based on options entered by user or default option
                 </li>
-              </ol>
+              </ul>
               <br />
             </div>
             <div>
@@ -176,45 +176,18 @@
                 <span class="subsection"><b><u>4.2</u></b></span>
                 Reviews
               </h4>
-              <ol>
+              <ul>
                 <li>
-                  Client posts opinions of beers
+                  User posts opinions of beers
                 </li>
                 <li>
-                  Client rates beers
+                  User rates beers
                 </li>
                 <li>
                   Forum page for each product for discussion
                 </li>
-              </ol>
+              </ul>
               <br />
-            </div>
-            <div>
-              <h4>
-                <span class="subsection"><b><u>4.3</u></b></span>
-                Client data-entry
-              </h4>
-              <ol>
-                <li>
-                  System for users to enter their own beers through popular vote, etc. (TBD)
-                </li>
-                <li>
-                  Client entries will have information about the user
-                </li>
-              </ol>
-              <br />
-            </div>
-            <div>
-              <h4>
-                <span class="subsection"><b><u>4.4</u></b></span>
-                Data Storage
-              </h4>
-              <ol>
-                <li>
-                  Heroku database hooked up to the Django REST Framework (API)
-                </li>
-              </ol>
-              <br /><br />
             </div>
           </div>
           <div>
@@ -230,7 +203,7 @@
                 Selection Screens (web-based)
               </h4>
               <p>
-                Users select the criteria they want, adjust the attributes of that property, and then choose to select more criteria or query the database. These screens will have intuitive selective features such as; drop down menus, check boxes. The need for a keyboard will be minimal, the only time it should be used is if the user wants to submit a review or if the user wants to add a custom beer.
+                Users select the criteria they want, adjust the attributes of that property, and then choose to change criteria or query the database. These screens will have intuitive selective features such like drop down menus and text field inputs.
               </p>
               <br /><br />
             </div>
@@ -256,7 +229,7 @@
                 Software Requirements
               </h4>
               <p>
-                This application will require that the device have an ability to connect to the internet and have uncorrupt version of an internet browser.
+                This application will require that the device have an ability to connect to the internet.
               </p>
               <br />
               <h4>
@@ -264,7 +237,7 @@
                 Human Capability Requirement
               </h4>
               <p>
-                This application will require that the user be able to read the instructions provided and understand beer tastes and qualities. The consumer is expected to have tried and be aware of the different flavours/renders unless they are a novice and choose the novice option.
+                This application will require that the user be able to understand the instructions provided and have a notion of beer tastes and qualities unless they are a novice and choose the novice option.
               </p>
               <br /><br />
             </div>
@@ -301,10 +274,10 @@
               </h4>
               <ul>
                 <li>
-                  API team begins their work and database team works on learning and coding a general template
+                  API team begins their work and database team works on learning and coding a general template.
                 </li>
                 <li>
-                  5 people start working on SQA as soon as API and database team finish working on their parts and have a functioning model
+                  SQA will formally conduct quality assurance when API and database teams have a functioning model. This is not a replacement for the testing of the database and API teams but rather will be done informally in parallel during design and implementation and formally afterwards
                 </li>
                 <li>
                   Bootstrap/CSS team starts working on creating different web page styles
@@ -414,7 +387,7 @@
             <div>
               <ul>
                 <li>
-                  The application is assumed to be open source, available for public use. Any programmer will be allowed to reuse part or all the code during the preliminary development stage. This group reserves the right to  refuse the open source availability of the application code.
+                  The application is assumed to be open source, available for public use. Any programmer will be allowed to reuse part or all the code during the preliminary development stage. This group reserves the right to refuse the open source availability of the application code.
                 </li>
               </ul>
             </div>
@@ -430,16 +403,16 @@
             <div>
               <ul>
                 <li>
-                  Databases can be updated with information from (local) beer vendors with price, availability, sales, etc.
+                  Databases can be updated with information from (local) beer vendors with price, sales, etc.
                 </li>
                 <li>
-                  The service assumes that the user will have some knowledge beers and an understanding of what they like. If however a beer-incompetent individual wants to use the service, we will implement a help feature button which explains the significantly different beers so that the users have a chance to pick an “extreme” option and then decide what they like.
+                  If an individual who lacks knowledge of beer wants to use the service, we will implement a help feature button which explains the types of beers to help the user get a general understanding of their differences.
                 </li>
                 <li>
-                  Review feature, time permitting this will be attempted so that beer consumers can rank their personal favorites.
+                  A review feature, time permitting, will be attempted so that beer consumers can rank their personal favorites.
                 </li>
                 <li>
-                  Future scaling option to create login mechanism. for reviewing purposes. Users of the application will be able to have an account that will store all their pending or approved purchases.
+                  Future scaling option to create login mechanism for reviewing purposes. Users of the application will be able to have an account that will store all their pending or approved purchases.
                 </li>
               </ul>
               <br /><br />
@@ -464,6 +437,7 @@
                 <li>Jeremy Lickers</li>
                 <li>Huai Yao Hu</li>
                 <li>Ni Yang</li>
+                <li>Abdisalan Abdi</li>
               </ul>
               <br />
               <h4>
@@ -473,8 +447,24 @@
               <ul>
                 <li>Russell Goldman</li>
                 <li>Tauqeer Choudhry</li>
+                <li>Matthew Wong</li>
+                <li>Huai Yao Hu</li>
+                <li>Ni Yang</li>
+                <li>Abdisalan Abdi</li>
               </ul>
-              <br /><br />
+              <br />
+              <h4>
+                <span class="subsection"><b><u>13.3</u></b></span>
+                August 13th, 2018 (v1.0 Beta)
+              </h4>
+              <ul>
+                <li>Russell Goldman</li>
+                <li>Tauqeer Choudhry</li>
+                <li>Franchesco Livado</li>
+                <li>Abdisalan Abdi</li>
+              </ul>
+              <br />
+              <br />
             </div>
           </div>
         </div>
